# AAXtoMP3

./: .dockerignore  .env.example  .gitignore  AAXtoMP3  AGENTS.md  CLAUDE.md  GEMINI.md  HANDOFF.md  README.md  consolidate_files.py  copy_audiobooks.sh  docker-compose.dev.yml  docker-compose.yml  generate_audiobook_metadata.py  get_and_convert_audiobooks.sh  move_m4b_files.py  plan.md  setup_env.sh  sync_audible_library_cli.py
apps/api/: .coveragerc  Dockerfile  Dockerfile.dev  README.md  alembic.ini  backfill_books_from_manifests.py  backfill_local_items_from_manifests.py  backfill_metadata.py  bootstrap_venv.sh  debug_data.py  debug_import.py  main.py  pyproject.toml  requirements.txt  restart_api.sh  run_dev.sh  run_prod.sh  test_fetch.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  365fa81e09e0_add_metadata_tables.py  4b2f4b0d0f1a_add_job_status_message_and_updated_at.py  6b7a9a8b3c2d_add_job_paused_status.py  9c1d3a4b5e6f_change_file_sizes_to_bigint.py  d38dcf655434_add_scan_job_type.py  e4a1b2c3d4e5_add_repair_settings.py  f7a2b3c4d5e6_add_job_retry_tracking.py
apps/api/api/: schemas.py
apps/api/api/routes/: __init__.py  health.py  jobs.py  library.py  settings.py  stream.py
apps/api/core/: __init__.py  config.py
apps/api/db/: __init__.py  models.py  session.py
apps/api/services/: __init__.py  audible_client.py  converter_engine.py  jit_streaming.py  job_manager.py  job_recovery.py  library_manager.py  metadata_extractor.py  repair_pipeline.py  title_matcher.py  websocket_manager.py
apps/api/tests/: conftest.py
(+259 files in other folders)
